name:                simpleservantblog
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pellagic-puffbomb/simpleservantblog#readme
license:             BSD3
license-file:        LICENSE
author:              erik aker
maintainer:          eraker@gmail.com
copyright:           MIT
category:            coding
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Config
                     , Api.Admin
                     , Api.Post
                     , Api.User
                     , Html.Home
                     , Html.About
                     , Models.Post
                     , Models.Author
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , elm-export
                     , monad-logger
                     , mtl
                     , postgresql-simple
                     , resource-pool
                     , servant
                     , servant-blaze
                     , servant-elm
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , wai-make-assets
                     , warp
  default-language:    Haskell2010

executable simpleservantblog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simpleservantblog
                     , resource-pool
                     , warp
  default-language:    Haskell2010

test-suite simpleservantblog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simpleservantblog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pellagic-puffbomb/simpleservantblog
