name:                simpleservantblog
version:             0.1.0.0
synopsis:            A CMS, blog-CRUD thing using Servant and Elm
description:         Please see README.md
homepage:            https://github.com/pellagic-puffbomb/simpleservantblog#readme
license:             BSD3
license-file:        LICENSE
author:              erik aker
maintainer:          eraker@gmail.com
copyright:           BSD3
category:            coding
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Config
                     , Api.Admin.Admin
                     , Api.Admin.Login
                     , Api.Post
                     , Api.Projects
                     , Api.Projects.TacoShop
                     , Html.Home
                     , Html.About
                     , Html.Contact
                     , Models.Post
                     , Models.Media
                     , Models.Author
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , cereal
                     , cryptonite
                     , elm-export
                     , lens
                     , mime-mail
                     , monad-logger
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , random
                     , resource-pool
                     , servant
                     , servant-blaze
                     , servant-foreign
                     , servant-elm
                     , servant-server
                     , servant-auth-cookie
                     , smtps-gmail
                     , text
                     , time
                     , tisch
                     , transformers
                     , users
                     , users-postgresql-simple
                     , wai
                     , wai-extra
                     , wai-make-assets
                     , warp
  default-language:    Haskell2010

executable simpleservantblog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simpleservantblog
                     , cryptonite
                     , data-default
                     , resource-pool
                     , servant-auth-cookie
                     , users
                     , warp
  default-language:    Haskell2010

executable simpleservantblog-plumbing
  hs-source-dirs:      app
  main-is:             Plumbing.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simpleservantblog
                     , data-default
                     , optparse-applicative
                     , postgresql-simple
                     , resource-pool
                     , text
                     , users
  default-language:    Haskell2010

test-suite simpleservantblog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simpleservantblog
                     , hspec
                     , http-client
                     , http-types
                     , servant-client
                     , servant-server
                     , transformers
                     , warp >= 3.2.4
                     , wai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pellagic-puffbomb/simpleservantblog
