name:                simpleservantblog
version:             0.2.0.0
synopsis:            A CMS, blog-CRUD thing using Servant and Elm
description:         Please see README.md
homepage:            https://github.com/pellagic-puffbomb/simpleservantblog#readme
license:             BSD3
license-file:        LICENSE
author:              erik aker
maintainer:          eraker@gmail.com
copyright:           BSD3
category:            coding
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Config
                     , Api.Admin
                     , Api.Login
                     , Api.Errors
                     , Api.Post
                     , Api.Types
                     , Api.Projects
                     , Api.Projects.TacoShop
                     , Api.Admin.MediaAdmin
                     , Api.Admin.PostAdmin
                     , Api.Admin.SeriesAdmin
                     , Api.Admin.UserAdmin
                     , Admin
                     , Html.Admin.Forms
                     , Html.Admin.Views
                     , Html.Home
                     , Html.Contact
                     , Html.Projects
                     , Models
                     , Models.Post
                     , Models.Projects
                     , Models.Media
                     , Models.Author
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , cereal
                     , cryptonite
                     , directory
                     , elm-export
                     , exceptions
                     , fast-logger
                     , http-api-data
                     , http-media
                     , http-types
                     , lens
                     , mime-mail
                     , monad-control
                     , monad-logger
                     , mtl
                     , postgresql-simple
                     , random
                     , resource-pool
                     , resourcet
                     , servant
                     , servant-blaze
                     , servant-foreign
                     , servant-elm
                     , servant-multipart
                     , servant-server
                     , servant-auth-cookie
                     , smtps-gmail
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , users
                     , users-postgresql-simple
                     , wai
                     , wai-extra
                     , wai-make-assets
                     , warp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable simpleservantblog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simpleservantblog
                     , cryptonite
                     , data-default
                     , fast-logger
                     , resource-pool
                     , servant-auth-cookie
                     , users
                     , warp
  default-language:    Haskell2010

executable simpleservantblog-plumbing
  hs-source-dirs:      app
  main-is:             Plumbing.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simpleservantblog
                     , data-default
                     , optparse-applicative
                     , postgresql-simple
                     , resource-pool
                     , text
                     , users
  default-language:    Haskell2010

test-suite simpleservantblog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simpleservantblog
                     , cryptonite
                     , data-default
                     , hspec
                     , http-client
                     , http-types
                     , postgresql-simple
                     , QuickCheck
                     , resource-pool
                     , servant-auth-cookie
                     , servant-client
                     , servant-quickcheck
                     , servant-server
                     , text
                     , transformers
                     , warp >= 3.2.4
                     , wai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pellagic-puffbomb/simpleservantblog
